# mpi-discover

./: CMakeLists.txt  DiscoverMessage.c  DiscoverMessage.h  SystemInformation.c  SystemInformation.h  main.c
